Fix misaligned columns on menu item table

--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -75,6 +75,10 @@ svg {
     font-size: large;
 }
 
+.menu-icon {
+    vertical-align: top;
+}
+
 .page-link {
     line-height: 1 !important;
 }
